--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,7 +1,7 @@
 {
   "site": {
     "title": "Ramón Gracia - Web Developer & Software Architect",
-    "description": "Professional portfolio of Ramón Gracia, software developer with experience in Vue.js, Angular, React, .NET and full-stack web development"
+    "description": "Professional portafolio of Ramón Gracia, software developer with experience in Vue.js, Angular, React, .NET and full-stack web development"
   },
   "nav": {
     "home": "Home",
