--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -1,7 +1,7 @@
 {
   "site": {
     "title": "Ramón Gracia - Desarrollador Web & Arquitecto de Software",
-    "description": "Portfolio profesional de Ramón Gracia, desarrollador de software con experiencia en Vue.js, Angular, React, .NET y desarrollo web full-stack"
+    "description": "Portafolio profesional de Ramón Gracia, desarrollador de software con experiencia en Vue.js, Angular, React, .NET y desarrollo web full-stack"
   },
   "nav": {
     "home": "Inicio",
